# Sweep

./: .gitignore  README.md  Sweep.sln
BackgroundService/: BackgroundService.csproj  Message.cs  MessagingService.cs  Program.cs
Cli/: Cli.csproj
Cli/src/: Program.cs
Core/: Core.csproj
Core.Test/: Core.Test.csproj
Core.Test/src/: Key.Test.cs
Core.Test/tests/: CircleOfFifts.Test.cs  Key.Test.cs
Core.Test/tests/Marking/: HashTagModelTest.cs  HashTagTest.cs
Core/src/core/: CircleOfFifths.cs  Key.cs  KeyNotation.cs  Note.cs  NoteFactory.cs  Tone.cs
Core/src/core/Marking/: HashTag.cs  (+4 more)
MenuBar/MacOS/: AppDelegate.swift  AppSettings.swift  Info.plist  MenuBarApp.swift  MenuContent.swift  constants.swift
MenuBar/MacOS/Base.lproj/: Main.storyboard
MenuBar/MacOS/MessagingService/: MessagingService.swift  Types.swift
MenuBar/MenuBar.xcodeproj/: project.pbxproj
MenuBar/MyMenuBar/: AppDelegate.swift  AppSettings.swift  ContentView.swift  MenuBarView.swift
MenuBar/MyMenuBar.xcodeproj/: project.pbxproj
NativeBackgroundService/: Cargo.toml
NativeBackgroundService/src/: main.rs  messaging.rs  track_info.rs
NativeBackgroundService/src/messaging/: events.rs
NativeBackgroundService/src/track_info/: rest.rs  rest_track_info_parser.rs
NodeBackgroundService/: package-lock.json  package.json  tsconfig.json
NodeBackgroundService/src/: TrackInfo.ts  TrackInfoService.ts  index.ts  messagingService.ts  parsingService.ts
ParsingService/: LegacyService.csproj  Program.cs
ParsingService/Properties/: launchSettings.json
TcpServer/: TcpServer.csproj
(+54 files in other folders)
