[package]
name = "native_background_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
bytes = "1.2.1"
log = { version = "0.4.17", features = ["std", "serde"] }
reqwest = { version = "0.11.12", features = ["json"] }
serde = {version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
simple_logger = "2.3.0"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "net", "macros", "io-util"] }
notify = { version = "5.0.0" }
home = "0.5.4"
